--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "Project-Rest-rant",
   "version": "1.0.0",
-  "engines":{
-    "node":"14.18.0"
+  "engines": {
+    "node": "14.18.0"
   },
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
-  },
+    "dev": "react-scripts start",
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,6 +24,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.2.9",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "serve": "^13.0.2"
   }
 }
